# platform

./: .env.example  .gitignore  CHARTER.md  CHARTER_v0.2.md  CHARTER_v0.3.md  CLAUDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_TASK02.md  NOTES_FROM_IMPLEMENTATION.md  README.md  TASK_01_scaffold_collectors.md  TASK_02_news_and_ils.md  docker-compose.yml  pyproject.toml
alembic/: env.py
config/: validation_markets.yaml
data/: fficd-004-inventory.jsonl  fixture_phase0.jsonl  fixture_phase05.jsonl
fflow/: __init__.py  cli.py  config.py  db.py  log.py  models.py
reports/: DOCUMENTED_CASES_INVENTORY.md  EVENT_RESOLVED_UMA_COVERAGE.md  MADURO_DATA_VERIFICATION.md  MADURO_VERIFICATION.md  POLYGONSCAN_COLLECTION_STATUS.md  RESOLUTION_TYPOLOGY_DISTRIBUTION.md  STATE_ASSESSMENT.md  TASK_02B_DIAGNOSTICS.md  TASK_02C_CLOB_DIAGNOSTICS.md  TASK_02C_RESULTS.md  TASK_02D_ILS_FFICD_RESULTS.md  TASK_02E_ILS_EVENT_RESOLVED.md  TASK_02F_BARAK_LLM_TIER3.md  TASK_02F_CONTROL_COMPARISON.md  TASK_02F_EPSTEIN_CASE_STUDY.md  TASK_02F_FINAL.md  TASK_02F_PROXY_REFINEMENT.md  TASK_02H_FFIC_DIAGNOSTICS.md  TASK_02H_PHASE2_RESULTS.md  TASK_02H_PHASE3_RESULTS.md  TASK_02_DIAGNOSTICS.md  TASK_03_FINAL.md  TASK_03_HAZARD_ESTIMATION.md  TASK_03_TYPOLOGY_REFINEMENT.md
scripts/: backfill_clob_phase3a.py  backfill_documented_cases.py  backfill_ffic_polygonscan_logs.py  backfill_sample.py  build_control_group.py  build_typology_dataset.py  diagnose_backfill_window.py  diagnose_clob_coverage.py  diagnose_ffic_missing.py  diagnose_state.py  diagnose_subgraph.py  diagnose_task02.py  epstein_phase3_query.py  init_db.sh  label_sample.py  make_foresightflow_fixture.py  paper3a_haiku_tevent.py  paper3a_phase1.py  paper3a_revb.py  phase0_typology_audit.py  phase2_hazard_estimation.py  phase3_ffic_tier3.py  (+5 more)
(+77 files in other folders)
